# axoreleases-test

./: Cargo.toml
.github/workflows/: release.yml
wix/: main.wxs
